--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 									
 
 									<p>
-										研究成果在Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci.等杂志发表SCI论文40余篇，详见<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a>和<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
+										研究成果在Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci.等期刊发表SCI论文40余篇，详见<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a>和<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
 									</p>
 
 									<p>
