--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							</p>
 
 							<p>
-								2021 “Talents Programme” of IPE, CAS<br/>
+								2021 “Talents Program” of IPE, CAS<br/>
 								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
 								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
 								2014 Sino-Foreign Joint Programs Funding of BUCT (to the University of Cambridge)<br/>
