--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 								2021.11月加入中国科学院过程工程研究所离子液体与低碳能源研究部，任(项目)研究员，博导。<br/>
 								2017.9-2021.8在澳大利亚悉尼大学<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Asaph Widmer-Cooper副教授课题组</a>开展博士后研究工作。<br/>
 								2014.11-2016.11在英国剑桥大学化学系<a href=https://www.ch.cam.ac.uk/person/df246>Daan Frenkel教授课题组</a>联合培养学习。<br/>
-								2010.9-2017.6年在北京化工大学<a href=https://www.researchgate.net/profile/Xianren-Zhang>张现仁教授课题组</a>开展硕士/博士学习，获工学博士学位(化学工程与技术)。<br/>
-								2006.9-2010.6年于北京化工大学开展本科学习，获得工学学士学位(化学工程与工艺)。<br/>
+								2010.9-2017.6年在北京化工大学<a href=https://www.researchgate.net/profile/Xianren-Zhang>张现仁教授课题组</a>攻读博士学位(硕博连读)，获工学博士学位(化学工程与技术)。<br/>
+								2006.9-2010.6年于北京化工大学本科学习，获得工学学士学位(化学工程与工艺)。<br/>
 							</p>
 							<p>
 								I am an Associate Professor at the Institute of Process Engineering of Chinese Academy of Sciences (IPE, CAS) since 2021.11. Prior to this I was a Postdoc researcher at the University of Sydney during 2017.9-2021.8 (<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>A/Prof. Asaph Widmer-Cooper's group</a>), a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>), a Master/PhD student at Beijing University of Chemical Technology (BUCT) during 2010.9-2017.7 (<a href=https://www.researchgate.net/profile/Xianren-Zhang>Prof. Xianren Zhang's group</a>), and an undergraduate student at BUCT during 2006.9-2010.6.
