--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							</p>
 
 							<p>
-								2022年 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
+								2022 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
 								2021 “Talents Program” of IPE, CAS<br/>
 								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
 								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
@@ -235,6 +235,12 @@
 											<a class="image"><img src="images/COF_ions.jpg" alt="" /></a>
 											<h4 class="major">Surface charges enable efficient ion exclusion</h4>
 											<p>With MD simulations, we proposed several potential mechanisms associated with the microscopic electrostatic interfactions to explain the efficient ion exlusion observed in charged COF membranes with large nanochannels.<br/> <a href=https://doi.org/10.1021/acsnano.2c04767>ACS Nano 2022, 16 (8), 11781–11791.</a></p>
+										</article>
+
+										<article>
+											<a class="image"><img src="images/rod_membrane.jpg" alt="" /></a>
+											<h4 class="major">Driving forces for chirality propagation in assemblies</h4>
+											<p>With LD simulations, a simple model system enables us to fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, Accepted Manuscript.</a></p>
 										</article>
 
 										
