--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
 										<article>
 											<a class="image"><img src="images/COF_ions.jpg" alt="" /></a>
 											<h4 class="major">Surface charges enable efficient ion exclusion</h4>
-											<p>With MD simulations, we proposed several potential mechanisms associated with the microscopic electrostatic interfactions to explain the efficient ion exlusion observed in charged COF membranes with large nanochannels.<br/> <a href=https://doi.org/10.1021/acsnano.2c04767>ACS Nano 2022, 16 (8), 11781–11791.</a></p>
+											<p>With MD simulations, we proposed several mechanisms associated with the microscopic electrostatic interfactions to explain the efficient ion exlusion observed in charged COF membranes.<br/> <a href=https://doi.org/10.1021/acsnano.2c04767>ACS Nano 2022, 16 (8), 11781–11791.</a></p>
 										</article>
 
 										<article>
 											<a class="image"><img src="images/rod_membrane.jpg" alt="" /></a>
 											<h4 class="major">Driving forces for chirality propagation in assemblies</h4>
-											<p>With LD simulations, a simple model system enables us to fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, Accepted Manuscript.</a></p>
+											<p>With LD simulations, we developed a simple model system that can fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, Accepted Manuscript.</a></p>
 										</article>
 
 										
