--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 										<article>
 											<a class="image"><img src="images/COF_ions.jpg" alt="" /></a>
 											<h4 class="major">Surface charges enable efficient ion exclusion</h4>
-											<p>With MD simulations, we proposed several mechanisms associated with the microscopic electrostatic interfactions to explain the efficient ion exlusion observed in charged COF membranes.<br/> <a href=https://doi.org/10.1021/acsnano.2c04767>ACS Nano 2022, 16 (8), 11781–11791.</a></p>
+											<p>With MD simulations, we proposed several mechanisms associated with the microscopic electrostatic interfactions to explain the efficient ion exlusion observed in charged COF membranes with large nanochannels.<br/> <a href=https://doi.org/10.1021/acsnano.2c04767>ACS Nano 2022, 16 (8), 11781–11791.</a></p>
 										</article>
 
 										<article>
