--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 										<article>
 											<a class="image"><img src="images/rod_membrane.jpg" alt="" /></a>
 											<h4 class="major">Driving forces for chirality propagation in assemblies</h4>
-											<p>With LD simulations, we developed a simple model system that can fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, Accepted Manuscript.</a></p>
+											<p>With LD simulations, we developed a simple model system that can fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, Advance Article.</a></p>
 										</article>
 
 										
