--- a/publications_books.html
+++ b/publications_books.html
@@ -337,7 +337,7 @@ kbd {
 
 <h3 id="toc_2"><strong><span style="color:#2da266">2022</span></strong></h3>
 
-<h5 id="toc_3">45. <span style="color:#00bfff">Liu, Y.</span>*; Wood, J. A.; Giacometti, A.; Widmer-Cooper, A.* The Thermodynamic Origins of Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <a href="https://doi.org/10.1039/D2NR05230J">Nanoscale 2022</a>.</h5>
+<h5 id="toc_3">45. <span style="color:#00bfff">Liu, Y.</span>*; Wood, J. A.; Giacometti, A.; Widmer-Cooper, A.* The Thermodynamic Origins of Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <a href="https://doi.org/10.1039/D2NR05230J">Nanoscale 2022</a>. <a href="https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&amp;themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a"><span style="color:#d56500">[Nanoscale 2023 Emerging Investigators]</span></a></h5>
 
 <h5 id="toc_4">44. Shi, B.; Pang, X.; Li, S.; Wu, H.; Shen, J.; Wang, X.; Fan, C.; Cao, L.; Zhu, T.; Qiu, M.; Yin, Z.; Kong, Y.; Liu, Y.; Zhang, M.; <span style="color:#00bfff">Liu, Y.</span>; Pan, F.; Jiang, Z. Short Hydrogen-Bond Network Confined on COF Surfaces Enables Ultrahigh Proton Conductivity. <a href="https://doi.org/10.1038/s41467-022-33868-8">Nat. Commun. 2022, 13 (1), 6666</a>.</h5>
 
@@ -359,7 +359,7 @@ kbd {
 
 <h3 id="toc_13"><strong><span style="color:#2da266">2021</span></strong></h3>
 
-<h5 id="toc_14">35. <span style="color:#00bfff">Liu, Y.</span>; Widmer-Cooper, A. A Dissipative Particle Dynamics Model for Studying Dynamic Phenomena in Colloidal Rod Suspensions. <a href="https://doi.org/10.1063/5.0041285">J. Chem. Phys. 2021, 154 (10), 104120</a>. <span style="color:#d56500">(Editor&#39;s Pick)</span></h5>
+<h5 id="toc_14">35. <span style="color:#00bfff">Liu, Y.</span>; Widmer-Cooper, A. A Dissipative Particle Dynamics Model for Studying Dynamic Phenomena in Colloidal Rod Suspensions. <a href="https://doi.org/10.1063/5.0041285">J. Chem. Phys. 2021, 154 (10), 104120</a>. <span style="color:#d56500">[Editor&#39;s Pick]</span></h5>
 
 <h5 id="toc_15">34. Wood, J. A.; <span style="color:#00bfff">Liu, Y.</span>; Widmer-Cooper, A. Crystal Nucleation in Colloidal Rod Suspensions: The Effect of Depletant Size. <a href="https://doi.org/10.1063/5.0052623">J. Chem. Phys. 2021, 154 (24), 244505</a>.</h5>
 
