--- a/publications_books.html
+++ b/publications_books.html
@@ -339,7 +339,7 @@ kbd {
 
 <h5 id="toc_3">46. Wang, H.; Zhai, Y.; Li, Y.; Cao, Y.; Shi, B.; Li, R.; Zhu, Z.; Jiang, H.; Guo, Z.; Wang, M.; Chen, L.; <span style="color:#00bfff">Liu, Y.</span>; Zhou, K.-G.; Pan, F.; Jiang, Z. Covalent Organic Framework Membranes for Efficient Separation of Monovalent Cations. <a href="https://doi.org/10.1038/s41467-022-34849-7">Nat. Commun. 2022, 13 (1), 7123</a>.</h5>
 
-<h5 id="toc_4">45. <span style="color:#00bfff">Liu, Y.</span>*; Wood, J. A.; Giacometti, A.; Widmer-Cooper, A.* The Thermodynamic Origins of Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <a href="https://doi.org/10.1039/D2NR05230J">Nanoscale 2022</a>. <a href="https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&amp;themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a"><span style="color:#d56500">[Nanoscale 2023 Emerging Investigators]</span></a></h5>
+<h5 id="toc_4">45. <span style="color:#00bfff">Liu, Y.</span>*; Wood, J. A.; Giacometti, A.; Widmer-Cooper, A.* The Thermodynamic Origins of Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <a href="https://doi.org/10.1039/D2NR05230J">Nanoscale 2022, 14, 16837–16844</a>. <a href="https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&amp;themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a"><span style="color:#d56500">[Nanoscale 2023 Emerging Investigators]</span></a></h5>
 
 <h5 id="toc_5">44. Shi, B.; Pang, X.; Li, S.; Wu, H.; Shen, J.; Wang, X.; Fan, C.; Cao, L.; Zhu, T.; Qiu, M.; Yin, Z.; Kong, Y.; Liu, Y.; Zhang, M.; <span style="color:#00bfff">Liu, Y.</span>; Pan, F.; Jiang, Z. Short Hydrogen-Bond Network Confined on COF Surfaces Enables Ultrahigh Proton Conductivity. <a href="https://doi.org/10.1038/s41467-022-33868-8">Nat. Commun. 2022, 13 (1), 6666</a>.</h5>
 
