--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 										<article>
 											<a class="image"><img src="images/rod_membrane.jpg" alt="" /></a>
 											<h4 class="major">Driving forces for chirality propagation in assemblies</h4>
-											<p>With LD simulations, we developed a simple model system that can fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, Advance Article.</a></p>
+											<p>With LD simulations, we developed a simple model system that can fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids under a broad range of particle shapes and interactions.<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, 14, 16837–16844.</a></p>
 										</article>
 
 										
@@ -447,7 +447,7 @@
 							<ul class="contact">
 								<li class="icon solid fa-envelope"><a href="mailto:ywliu@ipe.ac.cn">ywliu@ipe.ac.cn</a></li>
 								<li class="icon solid fa-address-card">
-									北京市海淀区中关村北二街1号过程大厦B<br/>
+									北京市海淀区中关村北二街1号过程大厦B座<br/>
 									Buiding B, No. 1, North 2nd Street of Zhongguancun, Haidian District, Beijing, 100190, China
 								</li>
 							</ul>
