--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
 							<p>
 								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子水平和纳米尺度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑健康、环境、能源等领域新型材料和工艺的设计和开发。为了激发这些工作并支撑真实系统的研究，我们经常与实验研究者密切合作。<br/>
 								我们特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括：<br/>
-								i) 纳米气泡：稳定性、成核/生长、迁移、融合等演化行为。<br/>
-								ii) 纳米流动：外场(电场/浓度场/温度场)驱动流体/颗粒运动，多孔材料纳微孔道内传输与分离。<br/>
-								iii) 纳米组装：溶液中分子/纳米颗粒的相互作用和组装结构与过程。<br/>
+								i) 纳米气泡/液滴：稳稳定、形貌、动态演化；反应气泡调控。<br/>
+								ii) 纳米传输/分离：场驱动界面渗透流、组分分离；膜分离。<br/>
+								iii) 纳米组装：结晶生长、组装结构与过程；纳米构筑。<br/>
 							</p>
 							<p>
 								Research in our group is focused on developing and applying multiscale analytical and computational methods (mainly molecular simulations) to study soft matter - i.e. substances held together 
 								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
 								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale perspective.Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in areas including health, environment, and energy. To inspire this work and to support research in real systems we often work closely with experimentalists.<br/>
 								We are very interested in how the surface/interface microscopic structures influence and regulate the behaviours of fluids and particles in soft matter systems. Main reserach topics includes:<br/> 
-								i) Nano-bubbles: evolution behaviors such as stability, nucleation/growth, coalescence, etc.<br/>
-								ii) Nano-fluidics: fluid/particle motions driven by external fields, transport and separation in porous materials.<br/>
-								iii) Nano-assembly: Molecule/Nanoparticle interactions and their assembly behaviours in solutions.<br/>
+								i) Nano-bubble/droplet: stability, morphology, and evolution; Bubble control in chemical reactions.<br/>
+								ii) Nano-transport/seperation: fluid/particle trasnport under external fields, species separation; Membrane separation. <br/>
+								iii) Nano-synthesize/assembly: crystallization and growth, assembly structure and process; Nano-construction.<br/>
 							</p>
 
 							<p>
