--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							</p>	
 
 							
-							<p><b>研究方向 Research interests</b></p>
+							<p><b>研究内容 Research interests</b></p>
 							
 
 							<p>
