--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								我们特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括：<br/>
 								i) 纳米气泡/液滴：稳稳定、形貌、动态演化；反应气泡调控。<br/>
 								ii) 纳米传输/分离：场驱动界面渗透流、组分分离；膜分离。<br/>
-								iii) 纳米组装：结晶生长、组装结构与过程；纳米构筑。<br/>
+								iii) 纳米合成/组装：结晶生长、组装结构与过程；纳米构筑。<br/>
 							</p>
 							<p>
 								Research in our group is focused on developing and applying multiscale analytical and computational methods (mainly molecular simulations) to study soft matter - i.e. substances held together 
