--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale perspective.Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in areas including health, environment, and energy. To inspire this work and to support research in real systems we often work closely with experimentalists.<br/>
 								We are very interested in how the surface/interface microscopic structures influence and regulate the behaviours of fluids and particles in soft matter systems. Main reserach topics includes:<br/> 
 								i) Nano-bubble/droplet: stability, morphology, and evolution; Bubble control in chemical reactions.<br/>
-								ii) Nano-transport/seperation: fluid/particle trasnport under external fields, species separation; Membrane separation. <br/>
+								ii) Nano-transport/seperation: fluid/particle transport under external fields, species separation; Membrane separation. <br/>
 								iii) Nano-synthesize/assembly: crystallization and growth, assembly structure and process; Nano-construction.<br/>
 							</p>
 
