--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 							<p><b>荣誉和奖励 HONOURS and AWARDS</b></p>
 							<p>
 								2023年 Nanoscale期刊“<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 新锐科学家</a>"<br/>
+								2023年 中国科学院“引才计划”<br/>
 								2021年 中科院过程所“引才计划”<br/>
 								2017年 北京化工大学优秀博士学位论文<br/>
 								2014年 北京化工大学博士论文创新基金<br/>
@@ -105,6 +106,7 @@
 
 							<p>
 								2023 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
+								2023 “Talents Program” of CAS<br/>
 								2021 “Talents Program” of IPE, CAS<br/>
 								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
 								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
