--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 							<p><b>荣誉和奖励 HONOURS and AWARDS</b></p>
 							<p>
-								2023年 Nanoscale期刊“<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 新锐科学家</a>"<br/>
+								2023年 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 新锐科学家</a>"<br/>
 								2022年 中国科学院“百人计划”<br/>
 								2021年 中科院过程所“过程杰青”<br/>
 								2017年 北京化工大学优秀博士学位论文<br/>
