--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								2023 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
 								2022 “Hundred Talents Program” of CAS<br/>
 								2021 “Process Distinguished Young Scholars” of IPE, CAS<br/>
-								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
+								2017 Best Doctoral Thesis of BUCT<br/>
 								2014 Innovation Fund for Doctoral Thesis of BUCT<br/>
 								2014 Sino-Foreign Joint Program Fund of BUCT (to the University of Cambridge)<br/>
 								2013 National Scholarship for Doctoral Students<br/>
