--- a/publications_books.html
+++ b/publications_books.html
@@ -337,7 +337,7 @@ kbd {
 
 <h3 id="toc_2"><strong><span style="color:#2da266">2023</span></strong></h3>
 
-<h5 id="toc_3">48. Guo, S.; <span style="color:#00bfff">Liu, Y.</span>; Wang, Y.; Dong, K.; Zhang, X.; Zhang, S. Interfacial Role of Ionic Liquids in CO2 Electrocatalytic Reduction: A Mechanistic Investigation. <a href="https://doi.org/10.1016/j.cej.2022.141076">Chem. Eng. J. 2023, 457</a>.</h5>
+<h5 id="toc_3">48. Guo, S.; <span style="color:#00bfff">Liu, Y.</span>; Wang, Y.; Dong, K.; Zhang, X.; Zhang, S. Interfacial Role of Ionic Liquids in CO2 Electrocatalytic Reduction: A Mechanistic Investigation. <a href="https://doi.org/10.1016/j.cej.2022.141076">Chem. Eng. J. 2023, 457, 141076</a>.</h5>
 
 <h3 id="toc_4"><strong><span style="color:#2da266">2022</span></strong></h3>
 
