--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 							<p><b>荣誉和奖励 HONOURS and AWARDS</b></p>
 							<p>
 								2023年 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 新锐科学家</a>"<br/>
-								2022年 中国科学院“百人计划”<br/>
-								2021年 中科院过程所“过程杰青”<br/>
+								2022年 中国科学院BR计划<br/>
+								2021年 中科院过程所引才计划<br/>
 								2017年 北京化工大学优秀博士学位论文<br/>
 								2014年 北京化工大学博士论文创新基金<br/>
 								2014年 北京化工大学中外联合培养基金(赴剑桥大学)<br/>
@@ -106,8 +106,8 @@
 
 							<p>
 								2023 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
-								2022 “Hundred Talents Program” of CAS<br/>
-								2021 “Process Distinguished Young Scholars” of IPE, CAS<br/>
+								2022 “Talents Program” of CAS<br/>
+								2021 “Talents Program” of IPE, CAS<br/>
 								2017 Best Doctoral Thesis of BUCT<br/>
 								2014 Innovation Fund for Doctoral Thesis of BUCT<br/>
 								2014 Sino-Foreign Joint Program Fund of BUCT (to the University of Cambridge)<br/>
