--- a/index.html
+++ b/index.html
@@ -68,20 +68,10 @@
 							
 
 							<p>
-								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子水平和纳米尺度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑健康、环境、能源等领域新型材料和工艺的设计和开发。为了激发这些工作并支撑真实系统的研究，我们经常与实验研究者密切合作。<br/>
-								我们特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括：<br/>
-								i) 纳米气泡/液滴：稳定性、形貌、动态演化；反应气泡调控。<br/>
-								ii) 纳米传输/分离：场驱动界面渗透流、组分分离；膜分离。<br/>
-								iii) 纳米合成/组装：结晶生长、组装结构与过程；纳米构筑。<br/>
+								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子水平和纳米尺度来研究复杂流体体系的表界面微观结构、热力学性质和动力学行为，如表面纳米气泡、界面/限域传递、界面组装等，探索其在电催化析气反应、膜分离过程及相关功能材料设计制备等能源、环境、健康领域的应用。为了激发这些工作并支撑实际应用的研究，我们与实验研究者密切合作。
 							</p>
 							<p>
-								Research in our group is focused on developing and applying multiscale analytical and computational methods (mainly molecular simulations) to study soft matter - i.e. substances held together 
-								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
-								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale perspective.Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in areas including health, environment, and energy. To inspire this work and to support research in real systems we often work closely with experimentalists.<br/>
-								We are very interested in how the surface/interface microscopic structures influence and regulate the behaviours of fluids and particles in soft matter systems. Main reserach topics includes:<br/> 
-								i) Nano-bubble/droplet: stability, morphology, and evolution; Bubble control in chemical reactions.<br/>
-								ii) Nano-transport/seperation: fluid/particle transport under external fields, species separation; Membrane separation. <br/>
-								iii) Nano-synthesize/assembly: crystallization and growth, assembly structure and process; Nano-construction.<br/>
+								We develop and apply multiscale analysis and computational methods (e.g. molecular dynamics simulations) to investigate the interfacial microstructures, thermodynamic properties, and dynamic behaviours in complex fluid systems at molecular and nanoscale levels. This includes studying phenomena such as surface nanobubbles, interfacial/confinement transport, and interfacial assembly. Our aim is to explore their applications in energy, environment, and health-related fields, such as electrocatalytic gas evolution reactions, membrane separation processes, and the design of functional material. To inspire these works and support practical applications, we closely collaborate with experimental researchers.
 							</p>
 
 							<p>
