--- a/conferences_talks.html
+++ b/conferences_talks.html
@@ -335,59 +335,84 @@ kbd {
 
 <h1 id="toc_1">Conferences and Talks</h1>
 
-<h3 id="toc_2"><strong><span style="color:#2da266">2022</span></strong></h3>
+<h3 id="toc_2"><strong><span style="color:#2da266">2023</span></strong></h3>
 
-<h5 id="toc_3">16. Understanding Soft Matter from Computations. <span style="color:#b80000">Invited Talk</span> – Prof. Xianren Zhang, Beijing University of Chemical Technology, <span style="color:#00bfff">Beijing, China</span>, Jan. 11, 2022. [中文]</h5>
+<h5 id="toc_3">18. Understanding Assembly of Nanoparticles from Computation. <span style="color:#b80000">Invited Oral</span> – The 9th International Conference on Nanoscience and Technology, China (ChinaNANO 2023), <span style="color:#00bfff">Beijing, China</span>, Aug. 27, 2023. [中文]</h5>
 
-<h3 id="toc_4"><strong><span style="color:#2da266">2021</span></strong></h3>
+<h5 id="toc_4">17. Interfacial structure-controlled nanomaterial assembly. <span style="color:#b80000">Invited Oral</span> – The 6th National Conference on Ionic Liquids and Green Processes, <span style="color:#00bfff">Deqing, China</span>, May 12, 2023. [中文]</h5>
 
-<h5 id="toc_5">15. Orientation of gold nanorods in electrophoresis. <span style="color:#b80000">Oral</span> – 10th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Sydney, Australia</span>, Feb. 8-11, 2021.</h5>
+<h3 id="toc_5"><strong><span style="color:#2da266">2022</span></strong></h3>
 
-<h3 id="toc_6"><strong><span style="color:#2da266">2020</span></strong></h3>
+<h5 id="toc_6">16. Understanding Soft Matter from Computations. <span style="color:#b80000">Invited Talk</span> – Prof. Xianren Zhang, Beijing University of Chemical Technology, <span style="color:#00bfff">Beijing, China</span>, Jan. 11, 2022. [中文]</h5>
 
-<h5 id="toc_7">14. Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2020, <span style="color:#00bfff">Online</span>, Dec. 14-16, 2020.</h5>
+<h3 id="toc_7"><strong><span style="color:#2da266">2021</span></strong></h3>
 
-<h5 id="toc_8">13. Molecular Simulation and Its Application in Nanoscale System. <span style="color:#b80000">Invited Talk</span> – Prof. Zhongyi Jiang, Tianjin University, <span style="color:#00bfff">Online</span>, <a href="http://jiang-lab.com/article/926">Jun. 4, 2020</a>. [中文]</h5>
+<h5 id="toc_8">15. Orientation of gold nanorods in electrophoresis. <span style="color:#b80000">Oral</span> – 10th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Sydney, Australia</span>, Feb. 8-11, 2021.</h5>
 
-<h5 id="toc_9">12. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – ICONN2020, <span style="color:#00bfff">Brisbane, Australia</span>, Feb. 9-13, 2020.</h5>
+<h3 id="toc_9"><strong><span style="color:#2da266">2020</span></strong></h3>
 
-<h3 id="toc_10"><strong><span style="color:#2da266">2019</span></strong></h3>
+<h5 id="toc_10">14. Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2020, <span style="color:#00bfff">Online</span>, Dec. 14-16, 2020.</h5>
 
-<h5 id="toc_11">11. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2019, <span style="color:#00bfff">Adelaide, Australia</span>, Dec. 16-17, 2019.</h5>
+<h5 id="toc_11">13. Molecular Simulation and Its Application in Nanoscale System. <span style="color:#b80000">Invited Talk</span> – Prof. Zhongyi Jiang, Tianjin University, <span style="color:#00bfff">Online</span>, <a href="http://jiang-lab.com/article/926">Jun. 4, 2020</a>. [中文]</h5>
 
-<h5 id="toc_12">10. Modelling Electrophoresis of Rod-shaped Colloidal Particles. <span style="color:#b80000">Invited Talk</span> – Prof. Paul Mulvaney, University of Melbourne, <span style="color:#00bfff">Melbourne, Australia</span>, Oct. 7, 2019.</h5>
+<h5 id="toc_12">12. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – ICONN2020, <span style="color:#00bfff">Brisbane, Australia</span>, Feb. 9-13, 2020.</h5>
 
-<h5 id="toc_13">9. Stability and formation of surface nanobubbles: a computer simulation study. <span style="color:#b80000">Poster</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
+<h3 id="toc_13"><strong><span style="color:#2da266">2019</span></strong></h3>
 
-<h5 id="toc_14">8. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
+<h5 id="toc_14">11. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2019, <span style="color:#00bfff">Adelaide, Australia</span>, Dec. 16-17, 2019.</h5>
 
-<h3 id="toc_15"><strong><span style="color:#2da266">2018</span></strong></h3>
+<h5 id="toc_15">10. Modelling Electrophoresis of Rod-shaped Colloidal Particles. <span style="color:#b80000">Invited Talk</span> – Prof. Paul Mulvaney, University of Melbourne, <span style="color:#00bfff">Melbourne, Australia</span>, Oct. 7, 2019.</h5>
 
-<h5 id="toc_16">7. Molecular Dynamic Simulations of Hard Rod-Shaped Particles. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2018, <span style="color:#00bfff">Auckland, New Zealand</span>, Dec. 6-7, 2018.</h5>
+<h5 id="toc_16">9. Stability and formation of surface nanobubbles: a computer simulation study. <span style="color:#b80000">Poster</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
 
-<h5 id="toc_17">6. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – Australian Symposium on Computational Enhanced Materials Design (ACEMD) 2018, <span style="color:#00bfff">Sydney, Australia</span>, Jul. 22-25, 2018.</h5>
+<h5 id="toc_17">8. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
 
-<h3 id="toc_18"><strong><span style="color:#2da266">2017</span></strong></h3>
+<h3 id="toc_18"><strong><span style="color:#2da266">2018</span></strong></h3>
 
-<h5 id="toc_19">5. Pressure-gradient approach fails to predict the microscopic Marangoni flow and diffusio-osmosis. <span style="color:#b80000">Poster</span> – Statistical Mechanics of Soft Matter (SM2) 2017, <span style="color:#00bfff">Sydney, Australia</span>, Nov. 27-28, 2017.</h5>
+<h5 id="toc_19">7. Molecular Dynamic Simulations of Hard Rod-Shaped Particles. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2018, <span style="color:#00bfff">Auckland, New Zealand</span>, Dec. 6-7, 2018.</h5>
 
-<h3 id="toc_20"><strong><span style="color:#2da266">2015</span></strong></h3>
+<h5 id="toc_20">6. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – Australian Symposium on Computational Enhanced Materials Design (ACEMD) 2018, <span style="color:#00bfff">Sydney, Australia</span>, Jul. 22-25, 2018.</h5>
 
-<h5 id="toc_21">4. Stability of Surface Nanobubbles. <span style="color:#b80000">Invited Talk</span> – Prof. Detlef Lohse, University of Twente, <span style="color:#00bfff">Enschede, Netherlands</span>, Jan. 26, 2015.</h5>
+<h3 id="toc_21"><strong><span style="color:#2da266">2017</span></strong></h3>
 
-<h3 id="toc_22"><strong><span style="color:#2da266">2013-2012</span></strong></h3>
+<h5 id="toc_22">5. Pressure-gradient approach fails to predict the microscopic Marangoni flow and diffusio-osmosis. <span style="color:#b80000">Poster</span> – Statistical Mechanics of Soft Matter (SM2) 2017, <span style="color:#00bfff">Sydney, Australia</span>, Nov. 27-28, 2017.</h5>
 
-<h5 id="toc_23">3. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – Chinese Physical Society (CPS) Fall Meeting 2013, <span style="color:#00bfff">Xiamen, China</span>, Sep. 13-16, 2013. [中文]</h5>
+<h3 id="toc_23"><strong><span style="color:#2da266">2015</span></strong></h3>
 
-<h5 id="toc_24">2. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – 2nd Chinese Meeting on Statistical Physics and Complex Systems, <span style="color:#00bfff">Qufu, China</span>, Jul. 28-31, 2013. [中文]</h5>
+<h5 id="toc_24">4. Stability of Surface Nanobubbles. <span style="color:#b80000">Invited Talk</span> – Prof. Detlef Lohse, University of Twente, <span style="color:#00bfff">Enschede, Netherlands</span>, Jan. 26, 2015.</h5>
 
-<h5 id="toc_25">1. Heterogeneous vapor-liquid nucleation and Nanobubble/droplet. <span style="color:#b80000">Poster</span> – Chinese Physical Society (CPS) Fall Meeting 2012, <span style="color:#00bfff">Guangzhou, China</span>, Sep. 20-23, 2012. [中文]</h5>
+<h3 id="toc_25"><strong><span style="color:#2da266">2013-2012</span></strong></h3>
 
-<h2 id="toc_26"></h2>
+<h5 id="toc_26">3. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – Chinese Physical Society (CPS) Fall Meeting 2013, <span style="color:#00bfff">Xiamen, China</span>, Sep. 13-16, 2013. [中文]</h5>
 
-<h4 id="toc_27"><a href="./index.html">HOME</a></h4>
+<h5 id="toc_27">2. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – 2nd Chinese Meeting on Statistical Physics and Complex Systems, <span style="color:#00bfff">Qufu, China</span>, Jul. 28-31, 2013. [中文]</h5>
+
+<h5 id="toc_28">1. Heterogeneous vapor-liquid nucleation and Nanobubble/droplet. <span style="color:#b80000">Poster</span> – Chinese Physical Society (CPS) Fall Meeting 2012, <span style="color:#00bfff">Guangzhou, China</span>, Sep. 20-23, 2012. [中文]</h5>
+
+<h2 id="toc_29"></h2>
+
+<h4 id="toc_30"><a href="./index.html">HOME</a></h4>
 
 
+
+<script type="text/x-mathjax-config">
+(function () {
+
+MathJax.Hub.Config({
+	'showProcessingMessages': false,
+	'messageStyle': 'none'
+});
+
+if (typeof MathJaxListener !== 'undefined') {
+	MathJax.Hub.Register.StartupHook('End', function () {
+		MathJaxListener.invokeCallbackForKey_('End');
+	});
+}
+
+})();
+</script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
 </body>
