--- a/conferences_talks.html
+++ b/conferences_talks.html
@@ -337,7 +337,7 @@ kbd {
 
 <h3 id="toc_2"><strong><span style="color:#2da266">2023</span></strong></h3>
 
-<h5 id="toc_3">18. Understanding Assembly of Nanoparticles from Computation. <span style="color:#b80000">Invited Oral</span> – The 9th International Conference on Nanoscience and Technology, China (ChinaNANO 2023), <span style="color:#00bfff">Beijing, China</span>, Aug. 27, 2023. [中文]</h5>
+<h5 id="toc_3">18. Understanding Assembly of Nanoparticles from Computation. <span style="color:#b80000">Invited Oral</span> – The 9th International Conference on Nanoscience and Technology, China (ChinaNANO 2023), <span style="color:#00bfff">Beijing, China</span>, Aug. 27, 2023.</h5>
 
 <h5 id="toc_4">17. Interfacial structure-controlled nanomaterial assembly. <span style="color:#b80000">Invited Oral</span> – The 6th National Conference on Ionic Liquids and Green Processes, <span style="color:#00bfff">Deqing, China</span>, May 12, 2023. [中文]</h5>
 
