--- a/publications_books.html
+++ b/publications_books.html
@@ -379,7 +379,7 @@ kbd {
 
 <h5 id="toc_23">42. Zhang, H.; <span style="color:#00bfff">Liu, Y.</span>; Dong, Y.; Ashokan, A.; Widmer-Cooper, A.; Köhler, J.; Mulvaney, P. Electrophoretic Deposition of Single Nanoparticles. <a href="https://doi.org/10.1021/acs.langmuir.3c02951">Langmuir 2024, 40 (6), 2783–2791</a>.</h5>
 
-<h5 id="toc_24">41. Wei, J.; Xue, Y.; <span style="color:#00bfff">Liu, Y.</span>; Tian, H.; Shao, Y.; Gao, Y. Q. Steric Repulsion Introduced by Loop Constraints Modulates the Microphase Separation of Chromatins. <a href="https://doi.org/10.1063/5.0189692">J. Chem. Phys. 2024, 160 (5)</a>.</h5>
+<h5 id="toc_24">41. Wei, J.; Xue, Y.; <span style="color:#00bfff">Liu, Y.</span>; Tian, H.; Shao, Y.; Gao, Y. Q. Steric Repulsion Introduced by Loop Constraints Modulates the Microphase Separation of Chromatins. <a href="https://doi.org/10.1063/5.0189692">J. Chem. Phys. 2024, 160 (5), 054904</a>.</h5>
 
 <h5 id="toc_25">40. Sheng, X.; Li, X.; Jia, Y.; Chen, P.; <span style="color:#00bfff">Liu, Y.</span>; Ru, G.; Xu, M.; Liu, L.; Zhu, X.; Jin, X.; Liu, Y.; Zhao, H.; Li, H. Electrochemical Biosensor for Protein Concentration Monitoring Using Natural Wood Evaporation for Power Generation. <a href="https://doi.org/10.1021/acs.analchem.3c05041">Anal. Chem. 2024, 96 (2), 917–925</a>.</h5>
 
