--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							
 
 							<p>
-								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子水平和纳米尺度来研究复杂流体体系的表界面微观结构、热力学性质和动力学行为，如界面纳米气泡、纳米限域流体、纳米材料界面组装等，探索其在电催化析气反应、膜分离过程及相关功能材料设计制备等能源、环境、健康领域的应用。为了激发这些工作并支撑实际应用的研究，我们与实验研究者密切合作。
+								我们开发和应用多尺度分析和计算方法（以分子模拟为主），面向纳米流体界面行为，从分子水平研究复杂流体体系的表界面微观结构、热力学性质和动力学行为，如界面纳米气泡、纳米限域流体、纳米材料界面组装等，探索其在电催化析气反应、膜分离过程及相关功能材料设计制备等能源、环境、健康领域的应用。为了激发这些工作并支撑实际应用的研究，我们与实验研究者密切合作。
 							</p>
 							<p>
 								We develop and apply multiscale analysis and computational methods (e.g. molecular dynamics simulations) to investigate the interfacial microstructures, thermodynamic properties, and dynamic behaviours in complex fluid systems at molecular and nanoscale levels. This includes studying phenomena such as surface nanobubbles, nanoconfined fluids, and interfacial assembly of nanomaterials. Our aim is to explore their applications in energy, environment, and health-related fields, such as electrocatalytic gas evolution reactions, membrane separation processes, and the design of functional material. To inspire these works and support practical applications, we closely collaborate with experimental researchers.
