--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 							<p><b>荣誉和奖励 HONOURS and AWARDS</b></p>
 							<p>
-								2024年 中国颗粒学会自然科学奖二等奖 "纳米气泡的成因和稳定机制"(2/6)
+								2024年 中国颗粒学会自然科学奖二等奖 "纳米气泡的成因和稳定机制"(2/6)<br/>
 								2023年 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 新锐科学家</a>"<br/>
 								2022年 中国科学院BR计划<br/>
 								2021年 中科院过程所引才计划<br/>
@@ -96,7 +96,7 @@
 							</p>
 
 							<p>
-								2024 Second Prize of Natural Science Award of Chinese Society of Particuology for “Origin and stabilisation mechanisms of nanobubbles” (2/6)
+								2024 Second Prize of Natural Science Award of Chinese Society of Particuology for “Origin and stabilisation mechanisms of nanobubbles” (2/6)<br/>
 								2023 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
 								2022 “Talents Program” of CAS<br/>
 								2021 “Talents Program” of IPE, CAS<br/>
