--- a/conferences_talks.html
+++ b/conferences_talks.html
@@ -335,65 +335,75 @@ kbd {
 
 <h1 id="toc_1">Conferences and Talks</h1>
 
-<h3 id="toc_2"><strong><span style="color:#2da266">2023</span></strong></h3>
+<h3 id="toc_2"><strong><span style="color:#2da266">2024</span></strong></h3>
 
-<h5 id="toc_3">19. Evolution and regulation of nanobubbles in electrochemical systems. <span style="color:#b80000">Invited Oral</span> – 2023 Annual Meeting of Chemical Industry and Engineering Society of China, <span style="color:#00bfff">Guangzhou, China</span>, Nov. 27-29, 2023. [中文]</h5>
+<h5 id="toc_3">23. Theoretical and computational study of surface nanobubbles. <span style="color:#b80000">Invited Talk</span> – Reading Club on Micro-/Nano-Bubbles, Chinese Society of Particuology, <span style="color:#00bfff">Online</span>, Sep. 13, 2024. [中文]</h5>
 
-<h5 id="toc_4">18. Understanding Assembly of Nanoparticles from Computation. <span style="color:#b80000">Invited Oral</span> – The 9th International Conference on Nanoscience and Technology, China (ChinaNANO 2023), <span style="color:#00bfff">Beijing, China</span>, Aug. 26-28, 2023.</h5>
+<h5 id="toc_4">22. Thermodynamic theory and simulation for interfacial behaviour of nanofluids. <span style="color:#b80000">Plenary Talk</span> – Symposium on Thermal Analysis Techniques and Applications 2024, <span style="color:#00bfff">Chengdu, China</span>, Aug. 9-13, 2023. [中文]</h5>
 
-<h5 id="toc_5">17. Interfacial structure-controlled nanomaterial assembly. <span style="color:#b80000">Invited Oral</span> – The 6th National Conference on Ionic Liquids and Green Processes, <span style="color:#00bfff">Deqing, China</span>, May 11-13, 2023. [中文]</h5>
+<h5 id="toc_5">21. Understanding membrane transport processes from computations. <span style="color:#b80000">Invited Oral</span> – International Congress on Separation and Purification Technology 2024 (ISPT2024), <span style="color:#00bfff">Zhenzhou, China</span>, July 7-11, 2024.</h5>
 
-<h3 id="toc_6"><strong><span style="color:#2da266">2022</span></strong></h3>
+<h5 id="toc_6">20. Micromechanism of diffusioosmotic flow and design of high-efficiency permeable membranes. <span style="color:#b80000">Invited Oral</span> – The 21st National Symposium on Chemical Thermodynamics and Thermal Analysis of the Chinese Chemical Society, <span style="color:#00bfff">Tianjin, China</span>, Apr. 19-21, 2024. [中文]</h5>
 
-<h5 id="toc_7">16. Understanding Soft Matter from Computations. <span style="color:#b80000">Invited Talk</span> – Prof. Xianren Zhang, Beijing University of Chemical Technology, <span style="color:#00bfff">Beijing, China</span>, Jan. 11, 2022. [中文]</h5>
+<h3 id="toc_7"><strong><span style="color:#2da266">2023</span></strong></h3>
 
-<h3 id="toc_8"><strong><span style="color:#2da266">2021</span></strong></h3>
+<h5 id="toc_8">19. Evolution and regulation of nanobubbles in electrochemical systems. <span style="color:#b80000">Invited Oral</span> – 2023 Annual Meeting of Chemical Industry and Engineering Society of China, <span style="color:#00bfff">Guangzhou, China</span>, Nov. 27-29, 2023. [中文]</h5>
 
-<h5 id="toc_9">15. Orientation of gold nanorods in electrophoresis. <span style="color:#b80000">Oral</span> – 10th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Sydney, Australia</span>, Feb. 8-11, 2021.</h5>
+<h5 id="toc_9">18. Understanding Assembly of Nanoparticles from Computation. <span style="color:#b80000">Invited Oral</span> – The 9th International Conference on Nanoscience and Technology, China (ChinaNANO 2023), <span style="color:#00bfff">Beijing, China</span>, Aug. 26-28, 2023.</h5>
 
-<h3 id="toc_10"><strong><span style="color:#2da266">2020</span></strong></h3>
+<h5 id="toc_10">17. Interfacial structure-controlled nanomaterial assembly. <span style="color:#b80000">Invited Oral</span> – The 6th National Conference on Ionic Liquids and Green Processes, <span style="color:#00bfff">Deqing, China</span>, May 11-13, 2023. [中文]</h5>
 
-<h5 id="toc_11">14. Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2020, <span style="color:#00bfff">Online</span>, Dec. 14-16, 2020.</h5>
+<h3 id="toc_11"><strong><span style="color:#2da266">2022</span></strong></h3>
 
-<h5 id="toc_12">13. Molecular Simulation and Its Application in Nanoscale System. <span style="color:#b80000">Invited Talk</span> – Prof. Zhongyi Jiang, Tianjin University, <span style="color:#00bfff">Online</span>, <a href="http://jiang-lab.com/article/926">Jun. 4, 2020</a>. [中文]</h5>
+<h5 id="toc_12">16. Understanding Soft Matter from Computations. <span style="color:#b80000">Invited Talk</span> – Prof. Xianren Zhang, Beijing University of Chemical Technology, <span style="color:#00bfff">Beijing, China</span>, Jan. 11, 2022. [中文]</h5>
 
-<h5 id="toc_13">12. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – ICONN2020, <span style="color:#00bfff">Brisbane, Australia</span>, Feb. 9-13, 2020.</h5>
+<h3 id="toc_13"><strong><span style="color:#2da266">2021</span></strong></h3>
 
-<h3 id="toc_14"><strong><span style="color:#2da266">2019</span></strong></h3>
+<h5 id="toc_14">15. Orientation of gold nanorods in electrophoresis. <span style="color:#b80000">Oral</span> – 10th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Sydney, Australia</span>, Feb. 8-11, 2021.</h5>
 
-<h5 id="toc_15">11. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2019, <span style="color:#00bfff">Adelaide, Australia</span>, Dec. 16-17, 2019.</h5>
+<h3 id="toc_15"><strong><span style="color:#2da266">2020</span></strong></h3>
 
-<h5 id="toc_16">10. Modelling Electrophoresis of Rod-shaped Colloidal Particles. <span style="color:#b80000">Invited Talk</span> – Prof. Paul Mulvaney, University of Melbourne, <span style="color:#00bfff">Melbourne, Australia</span>, Oct. 7, 2019.</h5>
+<h5 id="toc_16">14. Chiral Twist in Monolayer Assemblies of Rod-like Colloids. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2020, <span style="color:#00bfff">Online</span>, Dec. 14-16, 2020.</h5>
 
-<h5 id="toc_17">9. Stability and formation of surface nanobubbles: a computer simulation study. <span style="color:#b80000">Poster</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
+<h5 id="toc_17">13. Molecular Simulation and Its Application in Nanoscale System. <span style="color:#b80000">Invited Talk</span> – Prof. Zhongyi Jiang, Tianjin University, <span style="color:#00bfff">Online</span>, <a href="http://jiang-lab.com/article/926">Jun. 4, 2020</a>. [中文]</h5>
 
-<h5 id="toc_18">8. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
+<h5 id="toc_18">12. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – ICONN2020, <span style="color:#00bfff">Brisbane, Australia</span>, Feb. 9-13, 2020.</h5>
 
-<h3 id="toc_19"><strong><span style="color:#2da266">2018</span></strong></h3>
+<h3 id="toc_19"><strong><span style="color:#2da266">2019</span></strong></h3>
 
-<h5 id="toc_20">7. Molecular Dynamic Simulations of Hard Rod-Shaped Particles. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2018, <span style="color:#00bfff">Auckland, New Zealand</span>, Dec. 6-7, 2018.</h5>
+<h5 id="toc_20">11. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2019, <span style="color:#00bfff">Adelaide, Australia</span>, Dec. 16-17, 2019.</h5>
 
-<h5 id="toc_21">6. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – Australian Symposium on Computational Enhanced Materials Design (ACEMD) 2018, <span style="color:#00bfff">Sydney, Australia</span>, Jul. 22-25, 2018.</h5>
+<h5 id="toc_21">10. Modelling Electrophoresis of Rod-shaped Colloidal Particles. <span style="color:#b80000">Invited Talk</span> – Prof. Paul Mulvaney, University of Melbourne, <span style="color:#00bfff">Melbourne, Australia</span>, Oct. 7, 2019.</h5>
 
-<h3 id="toc_22"><strong><span style="color:#2da266">2017</span></strong></h3>
+<h5 id="toc_22">9. Stability and formation of surface nanobubbles: a computer simulation study. <span style="color:#b80000">Poster</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
 
-<h5 id="toc_23">5. Pressure-gradient approach fails to predict the microscopic Marangoni flow and diffusio-osmosis. <span style="color:#b80000">Poster</span> – Statistical Mechanics of Soft Matter (SM2) 2017, <span style="color:#00bfff">Sydney, Australia</span>, Nov. 27-28, 2017.</h5>
+<h5 id="toc_23">8. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
 
-<h3 id="toc_24"><strong><span style="color:#2da266">2015</span></strong></h3>
+<h3 id="toc_24"><strong><span style="color:#2da266">2018</span></strong></h3>
 
-<h5 id="toc_25">4. Stability of Surface Nanobubbles. <span style="color:#b80000">Invited Talk</span> – Prof. Detlef Lohse, University of Twente, <span style="color:#00bfff">Enschede, Netherlands</span>, Jan. 26, 2015.</h5>
+<h5 id="toc_25">7. Molecular Dynamic Simulations of Hard Rod-Shaped Particles. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2018, <span style="color:#00bfff">Auckland, New Zealand</span>, Dec. 6-7, 2018.</h5>
 
-<h3 id="toc_26"><strong><span style="color:#2da266">2013-2012</span></strong></h3>
+<h5 id="toc_26">6. Modelling hard-rod suspensions for use in molecular-dynamics simulations. <span style="color:#b80000">Oral</span> – Australian Symposium on Computational Enhanced Materials Design (ACEMD) 2018, <span style="color:#00bfff">Sydney, Australia</span>, Jul. 22-25, 2018.</h5>
 
-<h5 id="toc_27">3. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – Chinese Physical Society (CPS) Fall Meeting 2013, <span style="color:#00bfff">Xiamen, China</span>, Sep. 13-16, 2013. [中文]</h5>
+<h3 id="toc_27"><strong><span style="color:#2da266">2017</span></strong></h3>
 
-<h5 id="toc_28">2. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – 2nd Chinese Meeting on Statistical Physics and Complex Systems, <span style="color:#00bfff">Qufu, China</span>, Jul. 28-31, 2013. [中文]</h5>
+<h5 id="toc_28">5. Pressure-gradient approach fails to predict the microscopic Marangoni flow and diffusio-osmosis. <span style="color:#b80000">Poster</span> – Statistical Mechanics of Soft Matter (SM2) 2017, <span style="color:#00bfff">Sydney, Australia</span>, Nov. 27-28, 2017.</h5>
 
-<h5 id="toc_29">1. Heterogeneous vapor-liquid nucleation and Nanobubble/droplet. <span style="color:#b80000">Poster</span> – Chinese Physical Society (CPS) Fall Meeting 2012, <span style="color:#00bfff">Guangzhou, China</span>, Sep. 20-23, 2012. [中文]</h5>
+<h3 id="toc_29"><strong><span style="color:#2da266">2015</span></strong></h3>
 
-<h2 id="toc_30"></h2>
+<h5 id="toc_30">4. Stability of Surface Nanobubbles. <span style="color:#b80000">Invited Talk</span> – Prof. Detlef Lohse, University of Twente, <span style="color:#00bfff">Enschede, Netherlands</span>, Jan. 26, 2015.</h5>
 
-<h4 id="toc_31"><a href="./index.html">HOME</a></h4>
+<h3 id="toc_31"><strong><span style="color:#2da266">2013-2012</span></strong></h3>
+
+<h5 id="toc_32">3. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – Chinese Physical Society (CPS) Fall Meeting 2013, <span style="color:#00bfff">Xiamen, China</span>, Sep. 13-16, 2013. [中文]</h5>
+
+<h5 id="toc_33">2. Nanobubble stability induced by contact line pinning. <span style="color:#b80000">Oral</span> – 2nd Chinese Meeting on Statistical Physics and Complex Systems, <span style="color:#00bfff">Qufu, China</span>, Jul. 28-31, 2013. [中文]</h5>
+
+<h5 id="toc_34">1. Heterogeneous vapor-liquid nucleation and Nanobubble/droplet. <span style="color:#b80000">Poster</span> – Chinese Physical Society (CPS) Fall Meeting 2012, <span style="color:#00bfff">Guangzhou, China</span>, Sep. 20-23, 2012. [中文]</h5>
+
+<h2 id="toc_35"></h2>
+
+<h4 id="toc_36"><a href="./index.html">HOME</a></h4>
 
 
 
