--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							</p>
 
 							<p>
-								2024 Second Prize of Natural Science Award of Chinese Society of Particuology for “Origin and stabilisation mechanisms of nanobubbles” (2/6)<br/>
+								2024 Second Prize of Natural Science Award of Chinese Society of Particuology for “Origin and Stabilisation Mechanisms of anobubbles” (2/6)<br/>
 								2023 Nanoscale “<a href=https://pubs.rsc.org/en/journals/articlecollectionlanding?sercode=nr&themeid=589c4c49-0d90-4579-a206-fa4a268bbe6a>2023 Emerging Investigators</a>"<br/>
 								2022 “Talents Program” of CAS<br/>
 								2021 “Talents Program” of IPE, CAS<br/>
