--- a/index.html
+++ b/index.html
@@ -237,7 +237,17 @@
 											<p>We developed a simple model system that can fully characterize the thermodynamic forces that drive chiral assembly behaviours in membranes formed by small rod-like colloids<br/> <a href=https://doi.org/10.1039/D2NR05230J>Nanoscale 2022, 14, 16837–16844.</a></p>
 										</article>
 
-										
+										<article>
+											<a class="image"><img src="images/2022antifouling_surface.jpg" alt="" /></a>
+											<h4 class="major">Hydrophobic chain engineering for antifouling surfaces</h4>
+											<p>An amphiphilic surface consisting of hydrophilic phytic acid and hydrophobic C6 perfluorocarboxylic acids shows great antifouling properties due to high surface hydration capacity.<br/> <a href=https://doi.org/10.1038/s41467-022-35105-8>Nat. Commun. 2022, 13, 7334.</a></p>
+										</article>
+
+										<article>
+											<a class="image"><img src="images/2024COF_Li.jpg" alt="" /></a>
+											<h4 class="major">Ultrafast single lithium-ion transport in COF channels</h4>
+											<p>The COF channels functionalized with -PO<sub>3</sub><sup>2-</sup> and -O groups enable ultrafast single lithium-ion transport, as these groups create high-speed migration pathways for Li<sup>+</sup>.<br/> <a href=https://doi.org/10.1002/adma.202413022>Adv. Mater. 2024, 36 (52), 2413022.</a></p>
+										</article>
 
 									</section>
 									
